# proteinbias

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/community/: README.md
data/community/example_model/: model.py  scores.csv  summary.csv
data/core/: baseline_results.csv  baseline_scores.csv  baseline_summary.csv  selected_species_with_time_to_common_ancestor_matrix.csv
examples/: example_model.py
proteinbias/: __init__.py  benchmark.py  cache.py  cli.py  compute_elo.py  models.py  summary.py
tests/: test_benchmark.py  test_cache.py  test_compute_elo.py  test_models.py  test_summary.py
