[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proteinbias"
version = "0.1.0"
description = "A benchmarking framework for species bias in protein sequence models"
authors = [
    {name = "Frances Ding"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.19.0",
    "numba>=0.54.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pre-commit>=4.1.0",
]

[project.scripts]
proteinbias = "proteinbias.cli:main"

[tool.setuptools]
packages = ["proteinbias"]

[tool.setuptools.package-data]
proteinbias = ["data/**/*.csv"]